<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <RelativeLayout
        android:id="@+id/txt_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sign_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_had_an_account"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/sign_lin"
            android:text=" Log in"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_google"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:background="#F6F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_apple">

        <ImageView
            android:id="@+id/img_google"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/labelgoogle"
            app:srcCompat="@drawable/facebook_icon_xxhdpi" />

        <TextView
            android:id="@+id/labelgoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/continue_with_facebook"
            android:textColor="#2196F3"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_apple"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:background="#F6F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/img_apple"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/labelapple"
            app:srcCompat="@drawable/apple_icon" />

        <TextView
            android:id="@+id/labelapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/continue_with_apple"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_facebook"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:background="#F6F1F1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_google">

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/labelfacebook"
            app:srcCompat="@drawable/google_icon" />

        <TextView
            android:id="@+id/labelfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="@string/continue_with_google"
            android:textColor="#F70808"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_ctn" />

    <Button
        android:id="@+id/Btn_ctn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="28dp"
        android:background="@color/theme_color"
        android:text="@string/continue_"
        android:textColor="#F9F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_" />

    <TextView
        android:id="@+id/label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="70dp"
        android:text="@string/enter_your_phone_number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_account" />

    <TextView
        android:id="@+id/setup_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/set_up_your_account"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/container_"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_phone">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countyCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="#F6F1F1"
            android:gravity="center"
            app:ccp_countryAutoDetectionPref="NETWORK_LOCALE_SIM" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/countyCodePicker"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>